--- a/PCHUBStore/Views/Home/Index.cshtml
+++ b/PCHUBStore/Views/Home/Index.cshtml
@@ -1,8 +1,99 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-}
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+}
+<div style="position: fixed; top: 20px; right:0; display:block" id="videoPlayer">
+    <div class="row justify-content-end">
+        <div class="col-1">
+            <img src="~/img/window-close-solid.svg" id="closeVideoPlayer" style="display:block" width="30" height="30" />
+        </div>
+        <div class="col-3">
+            <p class="alert-warning">Close</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/dvl1aI4HHgo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
 </div>
+
+<!--Control Panel and Slider-->
+<div class="container " style="margin-top: 30px">
+    <div class="row justify-content-center">
+        <div class="col-lg-3 col-sm-12" id="controlPanel">
+            <!--tuka e admin panela -->
+            <ul class="navbar-nav sidebar-dark accordion" style="min-height: auto; background-color: rebeccapurple;" id="accordionSidebar">
+
+                <!-- Sidebar - Brand -->
+                <a class="sidebar-brand d-flex align-items-center justify-content-center">
+                    <div class="sidebar-brand-icon ">
+                        <img src="Model.ControlPanel" width="25px" height="25px" alt="Alternate Text" />
+                    </div>
+                    <div class="mx-3">Panel</div>
+                </a>
+
+                <!-- Divider -->
+                <hr class="sidebar-divider my-0">
+
+                <!-- Nav Item -
+                -->
+                <hr class="sidebar-divider">
+
+                <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
+                    <div class="sidebar-brand-icon">
+                        <img src="~/img/list.png" width="25px" height="25px" alt="Alternate Text" />
+                    </div>
+                    <div class="mx-3">Категории</div>
+                </a>
+                <!-- Divider -->
+                <hr class="sidebar-divider">
+
+                <!-- Heading -->
+                <div class="sidebar-heading">
+                    Options
+                </div>
+
+                <!-- Nav Item - Pages Collapse Menu -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" style="cursor: pointer">
+                        <i class="fas fa-fw fa-cog"></i>
+                        <span>Лаптопи</span>
+                    </a>
+
+                </li>
+
+                <!-- Nav Item - Utilities Collapse Menu -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" style="cursor: pointer">
+                        <i class="fas fa-fw fa-cog"></i>
+                        <span>Мишки</span>
+                    </a>
+
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link collapsed" style="cursor: pointer">
+                        <i class="fas fa-fw fa-cog"></i>
+                        <span>Клавиатури</span>
+                    </a>
+
+                </li>
+
+            </ul>
+        </div>
+
+
+        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
+            <!--tuka e slidera ili opciite koito shte budat postaveni -->
+            <div class="row align-items-center" id="optionsOrSlider">
+                <div class="col-12 text-center align-items-center" style="display: inherit">
+                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
+                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
