Navbar multiple changes related to the navbar - still to be completed. Remaining Work.

--- a/PCHUBStore/Views/Home/Index.cshtml
+++ b/PCHUBStore/Views/Home/Index.cshtml
@@ -2,21 +2,6 @@
     ViewData["Title"] = "Home Page";
 
 }
-<div style="position: fixed; top: 20px; right:0; display:block" id="videoPlayer">
-    <div class="row justify-content-end">
-        <div class="col-1">
-            <img src="~/img/window-close-solid.svg" id="closeVideoPlayer" style="display:block" width="30" height="30" />
-        </div>
-        <div class="col-3">
-            <p class="alert-warning">Close</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/dvl1aI4HHgo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
-</div>
 
 <!--Control Panel and Slider-->
 <div class="container " style="margin-top: 30px">
@@ -37,7 +22,7 @@
                 <hr class="sidebar-divider my-0">
 
                 <!-- Nav Item -
-                -->
+            -->
                 <hr class="sidebar-divider">
 
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
@@ -83,6 +68,72 @@
             </ul>
         </div>
 
+
+        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
+            <!--tuka e slidera ili opciite koito shte budat postaveni -->
+            <div class="row align-items-center" id="optionsOrSlider">
+                <div class="col-12 text-center align-items-center" style="display: inherit">
+                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
+                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
+            <!--tuka e slidera ili opciite koito shte budat postaveni -->
+            <div class="row align-items-center" id="optionsOrSlider">
+                <div class="col-12 text-center align-items-center" style="display: inherit">
+                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
+                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
+            <!--tuka e slidera ili opciite koito shte budat postaveni -->
+            <div class="row align-items-center" id="optionsOrSlider">
+                <div class="col-12 text-center align-items-center" style="display: inherit">
+                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
+                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
+            <!--tuka e slidera ili opciite koito shte budat postaveni -->
+            <div class="row align-items-center" id="optionsOrSlider">
+                <div class="col-12 text-center align-items-center" style="display: inherit">
+                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
+                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
+            <!--tuka e slidera ili opciite koito shte budat postaveni -->
+            <div class="row align-items-center" id="optionsOrSlider">
+                <div class="col-12 text-center align-items-center" style="display: inherit">
+                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
+                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
+            <!--tuka e slidera ili opciite koito shte budat postaveni -->
+            <div class="row align-items-center" id="optionsOrSlider">
+                <div class="col-12 text-center align-items-center" style="display: inherit">
+                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
+                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
+                </div>
+            </div>
+        </div>
 
         <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
             <!--tuka e slidera ili opciite koito shte budat postaveni -->
