scroll bar horizontal removed overflow-x: hidden

--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <link href="~/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
-<body style="background-color: #F2F1F0">
+<body style="background-color: #F2F1F0; overflow-x: hidden">
 
     <!-- Navigation -->  
         <nav style="width: 100%; height: auto; background-color: black" id="nav">
@@ -71,7 +71,7 @@
         </nav>
     <!-- Navigation -->
 
-    <div class="container">
+    <div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
