--- a/PCHUBStore/Views/Home/Index.cshtml
+++ b/PCHUBStore/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <!--Control Panel and Slider-->
-<div class="container " style="margin-top: 30px">
+<div style="padding-left: 40px; padding-right: 40px; margin-top: 40px">
     <div class="row justify-content-center">
         <div class="col-lg-3 col-sm-12" id="controlPanel">
             <!--tuka e admin panela -->
@@ -22,7 +22,7 @@
                 <hr class="sidebar-divider my-0">
 
                 <!-- Nav Item -
-            -->
+                -->
                 <hr class="sidebar-divider">
 
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
@@ -68,72 +68,6 @@
             </ul>
         </div>
 
-
-        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
-            <!--tuka e slidera ili opciite koito shte budat postaveni -->
-            <div class="row align-items-center" id="optionsOrSlider">
-                <div class="col-12 text-center align-items-center" style="display: inherit">
-                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
-                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
-            <!--tuka e slidera ili opciite koito shte budat postaveni -->
-            <div class="row align-items-center" id="optionsOrSlider">
-                <div class="col-12 text-center align-items-center" style="display: inherit">
-                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
-                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
-            <!--tuka e slidera ili opciite koito shte budat postaveni -->
-            <div class="row align-items-center" id="optionsOrSlider">
-                <div class="col-12 text-center align-items-center" style="display: inherit">
-                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
-                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
-            <!--tuka e slidera ili opciite koito shte budat postaveni -->
-            <div class="row align-items-center" id="optionsOrSlider">
-                <div class="col-12 text-center align-items-center" style="display: inherit">
-                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
-                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
-            <!--tuka e slidera ili opciite koito shte budat postaveni -->
-            <div class="row align-items-center" id="optionsOrSlider">
-                <div class="col-12 text-center align-items-center" style="display: inherit">
-                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
-                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
-            <!--tuka e slidera ili opciite koito shte budat postaveni -->
-            <div class="row align-items-center" id="optionsOrSlider">
-                <div class="col-12 text-center align-items-center" style="display: inherit">
-                    <img src="Model.LeftArrow" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="" style="width: 100%; min-height: 500px" alt="Alternate Text" id="mainSlidePic" />
-                    <img src="Model.RightArrow" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
-                </div>
-            </div>
-        </div>
 
         <div class="col-lg-9 col-sm-12" id="optionsOrSliderParent">
             <!--tuka e slidera ili opciite koito shte budat postaveni -->
