--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -27,44 +27,42 @@
 <body style="background-color: #F2F1F0; overflow-x: hidden">
 
     <!-- Navigation -->  
-        <nav style="width: 100%; height: auto; background-color: black" id="nav">
+        <nav class="navbar" style="max-width: inherit; height: auto; background-color: black" id="nav">
                 <!--lightning-->
 
-            <div class="row text-center">
+            <div class="row text-center" style="display: contents">
                 <!-- Home -->
-                <div style="height:80px;" class="col">
+                <div style="height:80px;" class="col-sm-6 col-lg-2">
                     <a style="display: inline-block" class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">
                         <img src="~/img/FinalLogo.png" style="width: 200px; height: 50px;" alt="Alternate Text" />
                         <p>Electronics Hub</p>
                     </a>
                 </div>
                 <!-- Search -->
-                <div class="col-6">
+                <div class="col-sm-6 col-lg-4">
                     <form class="form-inline m-4 justify-content-center">
                         <input class="form-control mr-sm-4" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
                     </form>
                 </div>
                 <!-- Shopping Cart -->
-                <div style="height:60px;" class="col">
+                <div style="height:60px;" class="col-sm-6 col-lg-2">
                     <a style="display: inline-block" class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">
                         <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px; z-index: 1" alt="Alternate Text" />
                         <span style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;">7</span>
                     </a>
                 </div>
                 <!-- Chat -->
-                <div style="height:60px;" class="col">
+                <div style="height:60px;" class="col-sm-6 col-lg-2">
                     <a style="display: inline-block" class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">
                         <img src="~/img/chat.png" style="width: 50px; height: 50px; " alt="Alternate Text" />
                     </a>
                 </div>
                 <!-- Profile -->
-                <div style="height:60px;" class="col">
-                    <a style="display: inline-block" class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">
-                        <img src="~/img/profile.png" style="width: 50px; height: 50px; " alt="Alternate Text" />
-                    </a>
+                <div style="height:60px;" class="col-sm-6 col-lg-2">
+                    <partial name="_LoginPartial" />
                 </div>
-
+            
             </div>
 
   
