--- a/PCHUBStore/Views/Home/Index.cshtml
+++ b/PCHUBStore/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                 <hr class="sidebar-divider my-0">
 
                 <!-- Nav Item -
-                -->
+    -->
                 <hr class="sidebar-divider">
 
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
@@ -62,6 +62,20 @@
                     <span style="font-size: xx-large;">Keyboards</span>
                 </a>
 
+                <hr class="sidebar-divider">
+                <a class="sidebar-brand d-flex align-items-center" style="cursor:pointer">
+                    <img src="~/img/computer.png" width="50px" height="50px" alt="Alternate Text" />
+                    <span style="font-size: xx-large;">Computers - PC</span>
+                </a>
+
+                <hr class="sidebar-divider">
+
+                <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
+                    <div class="sidebar-brand-icon">
+                        <img src="~/img/more.png" width="25px" height="25px" alt="Alternate Text" />
+                    </div>
+                    <div style="font-size: xx-large;" class="mx-3">More</div>
+                </a>
             </ul>
         </div>
 
@@ -71,7 +85,7 @@
             <div class="row align-items-center" id="optionsOrSlider">
                 <div class="col-12 text-center align-items-center" style="display: inherit">
                     <img src="~/img/arrow-circle-left-solid.svg" style="width: 60px; height: 60px; position: absolute; cursor:pointer; display:none" alt="Alternate Text" id="leftArrow" />
-                    <img src="~/img/option2.jpg" style="width: 100%; max-height: 500px" alt="Alternate Text" id="mainSlidePic" />
+                    <img src="~/img/option2.jpg" style="width: 100%; height: 100%" alt="Alternate Text" id="mainSlidePic" />
                     <img src="~/img/arrow-circle-right-solid.svg" style="width: 60px; height: 60px; position: relative; right: 60px; cursor:pointer; display: none" alt="Alternate Text" id="rightArrow" />
                 </div>
             </div>
