--- a/PCHUBStore/Views/Partial/Pagination.cshtml
+++ b/PCHUBStore/Views/Partial/Pagination.cshtml
@@ -4,7 +4,7 @@
 @if (Model.Pager.EndPage > 1)
 {
    
-        <ul class="pagination">
+        <ul class="pagination col-4">
             @if (Model.Pager.CurrentPage > 1)
             {
                 <li class="page-item">
