--- a/PCHUBStore/Views/Partial/Laptops/LaptopFiltersPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Laptops/LaptopFiltersPartial.cshtml
@@ -1,17 +1,60 @@
-﻿
-<div class="row text-center">
+﻿@model ICollection<PCHUBStore.View.Models.FilterViewModels.FilterCategoryViewModel>
 
 
 
-    <div class="col-12" style="background-color:white">
-        <h1>Filters</h1>
-        <p>Make</p>
-        <p>Processor</p>
-        <p>Hard</p>
-        <p>Video Card</p>
-        <p>OS</p>
-        <p>Make</p>
-    </div>
+    <form asp-controller="Products" asp-action="Laptops" class="productsViewStyle" style="border-style: solid; background-color: white; border-color:white" method="get">
+        <div class="container text-center border-bottom-info" style="background-color: #f6f6f6">
+            <img src="~/img/icons8-filter-64.png" alt="Filters" />
+        </div>
 
 
-</div>
+        <div class="container border-bottom-danger" style="margin-top: 20px">
+            <label for="OrderBy" style="font-family: sans-serif; color: black; font-size: 20px">Order By</label>
+            <select name="OrderBy" class="form-control" style="margin-bottom: 20px">
+                <option value="Default">Default</option>
+                <option value="PriceDesc">Price Descending</option>
+                <option value="PriceAscending">Price Ascending</option>
+            </select>
+        </div>
+
+        <div class="container border-bottom-danger text-center" style="margin-top: 20px;">
+            <div class="col-12 text-center" style="margin-bottom: 10px">
+                <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">Price</p>
+            </div>
+            <div class="col-12" style="margin-bottom: 20px">
+                <label for="MinPrice">Minimum Price</label>
+                <input type="text" name="MinPrice" value="400" />
+
+            </div>
+            <div class="col-12" style="margin-bottom: 20px">
+                <label for="MaxPrice">Maximum Price</label>
+                <input type="text" name="MaxPrice" value="10000" />
+            </div>
+
+        </div>
+        <div class="row" style="margin-top: 20px">
+
+            @foreach (var category in Model)
+            {
+                <div class="col-12 text-center" style="margin-bottom: 10px">
+                    <p class="border-bottom-success" style="font-family: sans-serif; color: black; font-size: 20px">@category.ViewSubCategoryName</p>
+                </div>
+
+                <div class="col-12">
+                    <label for="@category.ViewSubCategoryName">All</label>
+                    <input type="checkbox" checked name="@category.Filters.FirstOrDefault().Name" value="All" />
+                </div>
+
+                @foreach (var filter in category.Filters)
+                {
+                    <div class="col-12">
+                        <label for="@filter.Name">@filter.Value</label>
+                        <input type="checkbox" name="@filter.Name" value="@filter.Value" />
+                    </div>
+                }
+            }
+
+        </div>
+
+            <button id="btn" style="visibility: hidden" asp-controller="Products" asp-action="Laptops">Click Me</button>
+</form>
