updating the advanced details page for the laptops

--- a/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
@@ -37,7 +37,7 @@
             </div>
             <div style="border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: red" class="text-center">
                 <a href="Products/Laptop/@product.Id" style="text-decoration:none; font-size: 17px; color:black" class="text-center m-2">
-                    @product.Title
+                    @product.Title ...
                 </a>
             </div>
             <ul class="justify-content-center align-items-center productsViewStyle" style="margin-top: 20px">
