--- a/PCHUBStore/Views/Products/Laptop.cshtml
+++ b/PCHUBStore/Views/Products/Laptop.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Laptop " + Model.Model;
 }
 
+<!-- Basic Desctiption for the laptop -->
 
 <div class="row" style="margin-left: 3em; margin-right:3em; margin-top: 75px">
     <div class="col-lg-8 col-sm-12">
@@ -15,7 +16,7 @@
                 @foreach (var pic in Model.Pictures)
                 {
                     <div class="col-2">
-                        <img src="@pic" alt="Main Picture" style="width: 100px;" />
+                        <img src="@pic" alt="Main Picture" style="width: inherit;" />
                     </div>
                 }
             </div>
@@ -57,8 +58,22 @@
     </div>
 </div>
 
-
-
+<!-- Advanced Details for the laptop or product depends what will happen with the generic templates will they fit and shit -->
+<div class="row" style="background-color: white; margin-top: 4em">
+    @foreach (var advancedDetails in Model.AdvancedDetails)
+    {
+        <div class="col-12" style="margin-bottom: 10px; color: black">
+            <div class="row">
+                <div class="col-3 text-right" style="border-bottom: solid; border-bottom-color: orangered; border-bottom-width: 1px">
+                    <span>@advancedDetails.Key</span>
+                </div>
+                <div class="col-9">
+                    <span>@advancedDetails.Value</span>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
 
 
