similar laptops logic added

--- a/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Laptops/LaptopsPartial.cshtml
@@ -29,7 +29,7 @@
 
     @foreach (var product in Model)
     {
-        <div class="col-lg-3 col-sm-12 col-md-6" style="background-color:white; border: solid; border-width: 2px; border-color: white">
+        <div class="col-lg-3 col-sm-12 col-md-6 laptopsJs" style="background-color:white; border: solid; border-width: 2px; border-color: white">
 
             <img style="width: inherit; height: 203px" src="@product.PictureUrl" alt="Alternate Text" />
             <div class="text-center m-2" style="word-break: break-all; color: black; font-size: 30px; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: darkslateblue">
@@ -48,7 +48,7 @@
 
             </ul>
 
-            <div id="buyProductButton" class="text-center container" style="visibility: hidden">
+            <div class="text-center container" style="visibility: hidden">
 
 
                 <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px;" alt="Alternate Text" />
