--- a/PCHUBStore/Views/Products/Laptops.cshtml
+++ b/PCHUBStore/Views/Products/Laptops.cshtml
@@ -52,3 +52,9 @@ model="Model.Laptops"
         <partial name="~/Views/Partial/Laptops/LaptopsPartial.cshtml" model="Model.Laptops" />
     </div>
 </div>
+
+
+
+@section Scripts {
+    <script type="text/javascript" src="~/js/laptopsPage.js"></script>
+}
